--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SCGH Inventory Dashboard – 27 Feb 2026</title>
+<title>SCGH Inventory Dashboard – 27 Feb 2026 มี >365 days และไม่มียอดอีก 4 ล้านโดยประมาณ</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js"></script>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
